--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-merge": "^5.1.3"
   },
   "dependencies": {
-    "d3": "^6.1.1"
+    "d3": "^6.1.1",
+    "topojson-client": "^3.1.0"
   }
 }
